[package]
name = "flower-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
log = "0.4.8"
flower-parser = { path = "../flower-parser", version = "0.1.0" }

[dev-dependencies]
env_logger = "0.9.0"
trybuild = "1.0"
